kubernetes/ckan/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ckan
  labels:
    app: ckan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ckan
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ckan
    spec:
      imagePullSecrets:
        - name: pipeline-docker-registry  
      securityContext:
        runAsUser: 900
        runAsGroup: 900
        fsGroup: 900
      containers:
        - name: ckan
          image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
          volumeMounts:
            - name: ckan-data
              mountPath: /var/lib/ckan
              subPath: ckan-data
            - name: ckan-config
              mountPath: /etc/ckan/production.ini
              subPath: production.ini       
      volumes:
        - name: ckan-config
          secret:
            secretName: ckan-secret
            items:
            - key: CKAN_CONFIG
              path: production.ini
        - name: ckan-data
          persistentVolumeClaim:
            claimName: ckan-pvc
