kubernetes/ckan/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ckan
spec:
  selector:
    app: ckan
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
